--- a/irrigreatapp/templates/blogbase.html
+++ b/irrigreatapp/templates/blogbase.html
@@ -1,445 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
     <meta charset="utf-8">
     <!--  This file has been downloaded from bootdey.com @bootdey on twitter -->
     <!--  All snippets are MIT license http://bootdey.com/license -->
     <title>social network user profile example - Bootdey.com</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!--    JS in sequence-->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/js/select2.min.js"></script>
+
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet"/>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/select2/4.0.5/css/select2.min.css" rel="stylesheet"/>
+    <!--    JS in sequence-->
     <script src="https://code.jquery.com/jquery-1.10.2.min.js"></script>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
+    <script src="{% static 'js/bootstrap.bundle.js' %}"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.bundle.min.js"></script>
-    <style type="text/css">
-body{
-    background-color: #f9fafb;
-    margin-top:20px;}
-
-.profile-page .profile-header {
-    box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
-    border: 1px solid #f2f4f9;
-}
-
-.profile-page .profile-header .cover {
-    position: relative;
-    border-radius: .25rem .25rem 0 0;
-}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet">
 
 
-.profile-page .profile-header .cover figure {
-    margin-bottom: 0;
-}
+    <!-- Custom fonts for this template-->
+    <link href="https://fonts.googleapis.com/css?family=Nunito:200,200i,300,300i,400,400i,600,600i,700,700i,800,800i,900,900i"
+          rel="stylesheet">
 
-@media (max-width: 767px) {
-    .profile-page .profile-header .cover figure {
-        height: 110px;
-        overflow: hidden;
-    }
-}
+    <link href="{% static 'css/blogProfile.css' %}" rel="stylesheet">
+    <link href="{% static 'css/all.min.css' %}" rel="stylesheet">
+    <link href="{% static 'css/bootstrap.css' %}" rel="stylesheet">
+    <link href="{% static 'css/style.css' %}" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
-@media (min-width: 2400px) {
-    .profile-page .profile-header .cover figure {
-        height: 280px;
-        overflow: hidden;
-    }
-}
-
-.profile-page .profile-header .cover figure img {
-    border-radius: .25rem .25rem 0 0;
-    width: 100%;
-}
-
-@media (max-width: 767px) {
-    .profile-page .profile-header .cover figure img {
-        -webkit-transform: scale(2);
-        transform: scale(2);
-        margin-top: 15px;
-    }
-}
-
-@media (min-width: 2400px) {
-    .profile-page .profile-header .cover figure img {
-        margin-top: -55px;
-    }
-}
-
-.profile-page .profile-header .cover .gray-shade {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background: linear-gradient(rgba(255, 255, 255, 0.1), #fff 99%);
-}
-
-.profile-page .profile-header .cover .cover-body {
-    position: absolute;
-    bottom: -20px;
-    left: 0;
-    z-index: 2;
-    width: 100%;
-    padding: 0 20px;
-}
-
-.profile-page .profile-header .cover .cover-body .profile-pic {
-    border-radius: 50%;
-    width: 100px;
-}
-
-@media (max-width: 767px) {
-    .profile-page .profile-header .cover .cover-body .profile-pic {
-        width: 70px;
-    }
-}
-
-.profile-page .profile-header .cover .cover-body .profile-name {
-    font-size: 20px;
-    font-weight: 600;
-    margin-left: 17px;
-}
-
-.profile-page .profile-header .header-links {
-    padding: 15px;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-justify-content: center;
-    justify-content: center;
-    background: #fff;
-    border-radius: 0 0 .25rem .25rem;
-}
-
-.profile-page .profile-header .header-links ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.profile-page .profile-header .header-links ul li a {
-    color: #000;
-    -webkit-transition: all .2s ease;
-    transition: all .2s ease;
-}
-
-.profile-page .profile-header .header-links ul li:hover,
-.profile-page .profile-header .header-links ul li.active {
-    color: #727cf5;
-}
-
-.profile-page .profile-header .header-links ul li:hover a,
-.profile-page .profile-header .header-links ul li.active a {
-    color: #727cf5;
-}
-
-.profile-page .profile-body .left-wrapper .social-links a {
-    width: 30px;
-    height: 30px;
-}
-
-.profile-page .profile-body .right-wrapper .latest-photos > .row {
-    margin-right: 0;
-    margin-left: 0;
-}
-
-.profile-page .profile-body .right-wrapper .latest-photos > .row > div {
-    padding-left: 3px;
-    padding-right: 3px;
-}
-
-.profile-page .profile-body .right-wrapper .latest-photos > .row > div figure {
-    -webkit-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    margin-bottom: 6px;
-}
-
-.profile-page .profile-body .right-wrapper .latest-photos > .row > div figure:hover {
-    -webkit-transform: scale(1.06);
-    transform: scale(1.06);
-}
-
-.profile-page .profile-body .right-wrapper .latest-photos > .row > div figure img {
-    border-radius: .25rem;
-}
-
-.rtl .profile-page .profile-header .cover .cover-body .profile-name {
-    margin-left: 0;
-    margin-right: 17px;
-}
-.img-xs {
-    width: 37px;
-    height: 37px;
-}
-.rounded-circle {
-    border-radius: 50% !important;
-}
-img {
-    vertical-align: middle;
-    border-style: none;
-}
-
-.card-header:first-child {
-    border-radius: 0 0 0 0;
-}
-.card-header {
-    padding: 0.875rem 1.5rem;
-    margin-bottom: 0;
-    background-color: rgba(0, 0, 0, 0);
-    border-bottom: 1px solid #f2f4f9;
-}
-
-.card-footer:last-child {
-    border-radius: 0 0 0 0;
-}
-.card-footer {
-    padding: 0.875rem 1.5rem;
-    background-color: rgba(0, 0, 0, 0);
-    border-top: 1px solid #f2f4f9;
-}
-
-.grid-margin {
-    margin-bottom: 1rem;
-}
-
-.card {
-    box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
-    -webkit-box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
-    -moz-box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
-    -ms-box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
-}
-.rounded {
-    border-radius: 0.25rem !important;
-}
-.card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 1px solid #f2f4f9;
-    border-radius: 0.25rem;
-}
-
-</style>
 </head>
 <body>
 
 <div class="container">
-  {% block baseBody %} {% endblock baseBody %}
+    {% block baseBody %} {% endblock baseBody %}
 </div>
 
-<style type="text/css">
-body{
-    background-color: #f9fafb;
-    margin-top:20px;}
-
-.profile-page .profile-header {
-    box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
-    border: 1px solid #f2f4f9;
-}
-
-.profile-page .profile-header .cover {
-    position: relative;
-    border-radius: .25rem .25rem 0 0;
-}
-
-
-.profile-page .profile-header .cover figure {
-    margin-bottom: 0;
-}
-
-@media (max-width: 767px) {
-    .profile-page .profile-header .cover figure {
-        height: 110px;
-        overflow: hidden;
-    }
-}
-
-@media (min-width: 2400px) {
-    .profile-page .profile-header .cover figure {
-        height: 280px;
-        overflow: hidden;
-    }
-}
-
-.profile-page .profile-header .cover figure img {
-    border-radius: .25rem .25rem 0 0;
-    width: 100%;
-}
-
-@media (max-width: 767px) {
-    .profile-page .profile-header .cover figure img {
-        -webkit-transform: scale(2);
-        transform: scale(2);
-        margin-top: 15px;
-    }
-}
-
-@media (min-width: 2400px) {
-    .profile-page .profile-header .cover figure img {
-        margin-top: -55px;
-    }
-}
-
-.profile-page .profile-header .cover .gray-shade {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    z-index: 1;
-    background: linear-gradient(rgba(255, 255, 255, 0.1), #fff 99%);
-}
-
-.profile-page .profile-header .cover .cover-body {
-    position: absolute;
-    bottom: -20px;
-    left: 0;
-    z-index: 2;
-    width: 100%;
-    padding: 0 20px;
-}
-
-.profile-page .profile-header .cover .cover-body .profile-pic {
-    border-radius: 50%;
-    width: 100px;
-}
-
-@media (max-width: 767px) {
-    .profile-page .profile-header .cover .cover-body .profile-pic {
-        width: 70px;
-    }
-}
-
-.profile-page .profile-header .cover .cover-body .profile-name {
-    font-size: 20px;
-    font-weight: 600;
-    margin-left: 17px;
-}
-
-.profile-page .profile-header .header-links {
-    padding: 15px;
-    display: -webkit-flex;
-    display: flex;
-    -webkit-justify-content: center;
-    justify-content: center;
-    background: #fff;
-    border-radius: 0 0 .25rem .25rem;
-}
-
-.profile-page .profile-header .header-links ul {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-}
-
-.profile-page .profile-header .header-links ul li a {
-    color: #000;
-    -webkit-transition: all .2s ease;
-    transition: all .2s ease;
-}
-
-.profile-page .profile-header .header-links ul li:hover,
-.profile-page .profile-header .header-links ul li.active {
-    color: #727cf5;
-}
-
-.profile-page .profile-header .header-links ul li:hover a,
-.profile-page .profile-header .header-links ul li.active a {
-    color: #727cf5;
-}
-
-.profile-page .profile-body .left-wrapper .social-links a {
-    width: 30px;
-    height: 30px;
-}
-
-.profile-page .profile-body .right-wrapper .latest-photos > .row {
-    margin-right: 0;
-    margin-left: 0;
-}
-
-.profile-page .profile-body .right-wrapper .latest-photos > .row > div {
-    padding-left: 3px;
-    padding-right: 3px;
-}
-
-.profile-page .profile-body .right-wrapper .latest-photos > .row > div figure {
-    -webkit-transition: all .3s ease-in-out;
-    transition: all .3s ease-in-out;
-    margin-bottom: 6px;
-}
-
-.profile-page .profile-body .right-wrapper .latest-photos > .row > div figure:hover {
-    -webkit-transform: scale(1.06);
-    transform: scale(1.06);
-}
-
-.profile-page .profile-body .right-wrapper .latest-photos > .row > div figure img {
-    border-radius: .25rem;
-}
-
-.rtl .profile-page .profile-header .cover .cover-body .profile-name {
-    margin-left: 0;
-    margin-right: 17px;
-}
-.img-xs {
-    width: 37px;
-    height: 37px;
-}
-.rounded-circle {
-    border-radius: 50% !important;
-}
-img {
-    vertical-align: middle;
-    border-style: none;
-}
-
-.card-header:first-child {
-    border-radius: 0 0 0 0;
-}
-.card-header {
-    padding: 0.875rem 1.5rem;
-    margin-bottom: 0;
-    background-color: rgba(0, 0, 0, 0);
-    border-bottom: 1px solid #f2f4f9;
-}
-
-.card-footer:last-child {
-    border-radius: 0 0 0 0;
-}
-.card-footer {
-    padding: 0.875rem 1.5rem;
-    background-color: rgba(0, 0, 0, 0);
-    border-top: 1px solid #f2f4f9;
-}
-
-.grid-margin {
-    margin-bottom: 1rem;
-}
-
-.card {
-    box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
-    -webkit-box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
-    -moz-box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
-    -ms-box-shadow: 0 0 10px 0 rgba(183, 192, 206, 0.2);
-}
-.rounded {
-    border-radius: 0.25rem !important;
-}
-.card {
-    position: relative;
-    display: flex;
-    flex-direction: column;
-    min-width: 0;
-    word-wrap: break-word;
-    background-color: #fff;
-    background-clip: border-box;
-    border: 1px solid #f2f4f9;
-    border-radius: 0.25rem;
-}
-
-</style>
 
 <script type="text/javascript">
 
